# rl_obstacle_avoidance

./: README.md
Dynamic_TEB/turtlebot3_metrics/: run_metrics.sh
Dynamic_TEB/turtlebot3_simulations/MoveObject/: CMakeLists.txt
RL/: README.md
RL/TD3/: test_velodyne_td3.py  velodyne_env.py
RL/TD3/pytorch_models/: TD3_velodyne_actor.pth  TD3_velodyne_critic.pth
RL/TD3/results/: TD3_velodyne.npy
TD3/: move.py  train_velodyne_td3.py
TD3/.tbfix/cryptography-46.0.7.dist-info/: RECORD
TD3/assets/: multi_robot_scenario.launch
TD3/runs/Apr18_19-04-46_VICTUS/: events.out.tfevents.1776519286.VICTUS.35575.0
catkin_ws/build_isolated/: catkin_make_isolated.cache
catkin_ws/build_isolated/multi_robot_scenario/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/velodyne_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/velodyne_gazebo_plugins/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/velodyne_simulator/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel_isolated/multi_robot_scenario/: .catkin  .rosinstall  setup.fish  setup.sh
catkin_ws/devel_isolated/velodyne_description/: .catkin  .rosinstall  _setup_util.py  local_setup.fish
catkin_ws/devel_isolated/velodyne_gazebo_plugins/: .catkin
catkin_ws/devel_isolated/velodyne_simulator/: .catkin  .rosinstall  setup.sh
devel/lib/turtlebot3_gazebo/: move_bookstore_boxes.py
hybrid_planner_repo/: CMakeLists.txt  README.md  move_base.launch  package.xml
hybrid_planner_repo/Maps/: map_dynamic_obs.yaml
multi_robot_scenario/launch/: TD3.world
src/turtlebot3_metrics/: package.xml
src/turtlebot3_metrics/config/: metrics_config.yaml
src/turtlebot3_metrics/scripts/: compute_metrics.py  metrics.csv  record_metrics.py
src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt  package.xml
turtlebot3/turtlebot3_navigation/maps/: bookstore_map.pgm  bookstore_map.yaml
turtlebot3_metrics/: CMakeLists.txt
turtlebot3_metrics/launch/: record_metrics.launch
turtlebot3_metrics/scripts/: metrics.json  plot_metrics.py
turtlebot3_simulations/MoveObject/: CMakeLists.txt  package.xml
(+108 files in other folders)
