<?xml version="1.0"?>
<package format="2">
  <name>move_object</name>
  <version>0.0.1</version>
  <description>Gazebo plugin to move dynamic obstacles in simulation</description>
  <maintainer email="ayushsawarn166@gmail.com">Ayush Sawarn</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
